--- a/styles2.css
+++ b/styles2.css
@@ -1,304 +1,596 @@
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
+
+/* html{
+    font-size: 62.5%; /*10px for converting rem
+} */
+
+
+/********************************ELEMENT SELECTORS OR GLOBAL STYLES ********************************/
 
 body {
-  font-family: 'Roboto', sans-serif;
+    font-family: 'Poppins', sans-serif;
+
 }
 
+/********************************HERO SECTION ********************************/
+
 .header {
-  height: 100vh;
-  background-image: url("/img/profile.jpg");
-  background-size: cover;
-  background-position: center;
-  text-align: center;
-  justify-content: center;
-  margin-left: 15px;
+    height: 100vh;
+    background-image: linear-gradient(rgba(3, 4, 7, 0.48), rgba(5, 10, 30, 0.48)), url('/img/profile.jpg');
+    background-size: cover;
+    background-position: center;
+}
+
+.header__image {
+    display: none;
 }
 
 .header-brand {
-  color: burlywood;
-  text-decoration: none;
-  font-weight: 700;
-  font-size: 45px;
+    color: #fff;
+    text-decoration: none;
+    font-weight: 700;
+    font-size: 45px;
 }
 
 .header-brand__span {
-  color: white;
+    color: #20E700;
+
 }
 
 nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 3% 7%;
+    /* background-color: orangered; */
+    
+    display: flex;
+    /*one dimensional main axis cross axis*/
+    align-items: center;
+    justify-content: space-between;
+    padding: 3% 7%;
+   
 }
-
 
 nav ul li {
-  display: inline-block;
-  margin: 10px 20px;
+    display: inline-block;
+    margin: 10px 20px;
 }
 
-nav ul li a{
-  color: white;
-  text-decoration: none;
-  font-size: 18px;
+nav ul li a {
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
 }
 
 .header-text {
-  position: absolute;
-  top: 50%;
-  left: 38%;
-  transform: translate(-50%, -50%);
-  color: white;
-  text-align: left;
-}
-
-.header-text h1 {
-  font-size: 50px;
-  margin-top: 50px;
-}
-
-
-/* <!-- **************************** ABOUT ME SECTION *************************** --> */
-
-.about {
-  background-color: burlywood;
-  height: 80vh;
-}
-
-.about-text {
-  color: white;
-  margin: auto;
-  text-align: center;
-  width: 50%;
-}
-
-.about-text h2 {
-  font-size: 60px;
-  padding-top: 6rem;
-}
-
-.about-text p {
-  padding-top: 2rem;
-  line-height: 1.8rem;
-  text-align: center;
-}
-
-.about-skills {
-  width: 50%;
-  color: white;
-  margin: auto;
-  padding-top: 3%;
-  display: flex;
-  justify-content: center;
-  flex-direction: row;
-  align-items: center;
-}
-
-.about-skills h3 {
-  padding-right: 5%;
-  font-size: 25px;
-}
-
-.about-skills__h3--1 {
-  border-bottom: 3px solid palevioletred;
-  width: 5%;
-  margin-right: 50px;
-}
-
-/* <!-- **************************** MY PORTFOLIO SECTION *************************** --> */
-
-.portfolio {
-  height: 100vh;
-  padding: 50px 0;
-  text-align: center;
-  color: maroon;
-  font-size: 60px;
-}
-
-.portfolio__container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-gap: 40px;
-  padding: 5%;
-  margin-top: 50px;
-}
-
-.portfolio h2 {
-  margin-top: 1%;
-  font-size: 60px;
-}
-
-.portfolio__img {
-  border-radius: 10px;
-  position: relative;
-}
-
-.portfolio__img img {
-  object-fit: cover;
-  width: 100%;
-  height: 400px;
-  border-radius: 10px;
-  display: block;
-}
-
-.portfolio__btn {
-  background-color: brown;
-  color: #fff;
-  height: 84px;
-  width: 287px;
-  border-radius: 10px;
-  text-decoration: none;
-  padding: .5% 1%;
-}
-
-/* <!-- **************************** CONTACT SECTION *************************** --> */
-
-.contact {
-  background-color: aquamarine;
-  height: 100vh;
-  margin-top: 300px;
-  padding: 5%;
-  color:rebeccapurple;
-}
-
-.contact__row {
-  display: flex;
-  flex-direction: row;
-}
-
-.contact h2 {
-  font-size: 60px;
-}
-
-.contact-left {
-  flex-basis: 35%;
-}
-
-.contact-left p {
-  margin-top: 30px;
-}
-
-.contact-left p i{
-  color: pink;
-  margin-right: 15px;
-  font-size: 25px;
-}
-
-.contact-left__icons {
-  margin-top: 15px;
-}
-
-.contact-left__icons a {
-  text-decoration: none;
-  font-size: 30px;
-  margin-right: 15px;
-  color: #D9D9D9;
-  display: inline-block;
-}
-
-.contact-left__icons a:hover {
-  color: pink;
-  transform: translate(-5px);
-}
-
-.contact__btn {
-  display: block;
-  margin: 50% auto;
-  border: 1px solid pink;
-  padding: 14px 50px;
-  border-radius: 6px;
-  text-decoration: none;
-  color: rgb(243, 237, 237);
-  width: fit-content;
-}
-
-.contact__btn:hover {
-  background: pink;
-}
-
-.contact__btn.contact__btn--1 {
-  display: inline-block;
-}
-
-.contact-right {
-  flex-basis: 60%;
-}
-
-.contact-right form {
-  width: 100%;
-}
-
-form input, form textarea {
-  width: 100%;
-  border: 0;
-  outline: none;
-  background: #141414;
-  padding: 15px;
-  margin: 15px 0;
-  color: white;
-  font-size: 18px;
-  border: 6px;
-}
-
-.contact__btn.contact__btn--2 {
-  display: inline-block;
-  background-color: rgb(58, 57, 57);
-  font-size: 18px;
-}
-
-.contact__btn--2:hover {
-  background: rgb(214, 3, 119);
-  cursor: pointer;
-}
-
-footer {
-  height: 15vh;
-  width: 100%;
-  text-align: center;
-  padding: 3% 0;
-  background-color: #D9D9D9;
-  font-weight: 300;
-}
-
-
-/* <!-- **************************** HERO SECTION *************************** --> */
-
-@media only screen and (max-width: 600px) {
-
-  .header {
-    background-image: none;
-    background-color: #242323;
-  }
-  
-  .header__image {
-    display: block;
-  }
-  
-  .header__image img {
-    object-fit: cover;
+    /* background-color: orangered;  */
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    height: 200px;
-    width: 200px;
-    border-radius: 50%;
-  }
-
-  .header-text {
-    display: none;
-  }
-
-  .header-text--2 {
-    display: block;
-    position: absolute;
-    top: 80%;
-    left: 50%;
-    transform: translate(-50% -50%);
-  }
+    color: #fff;
 }
+
+.header-text h1 {
+    font-size: 70px;
+    margin-top: 10px;
+}
+
+.header-text--2 {
+    display: none;
+}
+
+
+
+
+/********************************ABOUT ME SECTION ********************************/
+
+.about {
+    background-color: #242323;
+    height: 80vh;
+}
+
+
+
+.about-img {
+    display: none;
+}
+
+.about-text {
+    /* background-color: orangered; */
+    color: white;
+    margin: auto;
+    text-align: center;
+    width: 50%;
+}
+
+.about-text h2 {
+    font-size: 60px;
+    /* background-color:green; */
+    padding-top: 6rem;
+}
+
+.about-text p {
+    /* background-color: blue; */
+    padding-top: 2rem;
+    line-height: 1.8rem;
+    text-align: center;
+}
+
+.about-skills {
+    /* background-color: orangered; */
+    width: 50%;
+    color: white;
+    margin: auto;
+    padding-top: 3%;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+}
+
+.about-skills h3 {
+    padding-right: 5%;
+}
+
+.about-skills__h3--1 {
+    border-bottom: 3px solid #20E700;
+    width: 5%;
+    margin-right: 50px;
+}
+
+/*******************************MY PORTFOLIO SECTION *******************************/
+.portfolio {
+    height: 100vh;
+    padding: 50px 0;
+    text-align: center;
+    color: #362D2D;
+    font-size: 60px;
+
+}
+
+.portfolio__container {
+    display: grid;
+    /*two-dimensional*/
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 40px;
+    padding: 5%;
+    margin-top: 50px;
+}
+
+.portfolio h2 {
+    margin-top: 1%;
+    font-size: 60px;
+}
+
+.portfolio__img {
+    border-radius: 10px;
+    position: relative;
+    transition: .5s ease;
+}
+
+.portfolio__img:hover{
+    transform: scaleY(.5);
+}
+.portfolio__img img {
+    object-fit:cover;
+    width: 100%;
+    height: 400px;
+    border-radius: 10px;
+    display: block;
+}
+
+.portfolio__btn {
+    background-color: #45893A;
+    color: #fff;
+    height: 84px;
+    width: 287px;
+    border-radius: 10px;
+    text-decoration: none;
+    padding: .5% 1%;
+}
+
+/*******************************CONTACT SECTION *******************************/
+.contact {
+    background-color: #312D2D;
+    height: 100vh;
+    margin-top: 300px;
+    padding: 5%;
+    color: #fff;
+}
+
+.contact__row {
+    display: flex;
+    flex-direction: row;
+}
+
+.contact h2 {
+    font-size: 60px;
+}
+
+.contact-left {
+    flex-basis: 35%;
+}
+
+.contact-left p {
+    margin-top: 30px;
+}
+
+.contact-left p i {
+    color: #20E700;
+    margin-right: 15px;
+    font-size: 25px;
+}
+
+.contact-left__icons {
+    margin-top: 15px;
+}
+
+.contact-left__icons a {
+    text-decoration: none;
+    font-size: 30px;
+    margin-right: 15px;
+    color: #D9D9D9;
+    display: inline-block;
+
+}
+
+.contact-left__icons a:hover {
+    color: #45893A;
+    transform: translateY(-5px);
+}
+
+.contact__btn {
+    display: block;
+    margin: 50px auto;
+    border: 1px solid #2ecc71;
+    padding: 14px 50px;
+    border-radius: 6px;
+    text-decoration: none;
+    color: white;
+    width: fit-content;
+}
+
+.contact__btn:hover {
+    background: #2ecc71;
+}
+
+.contact__btn.contact__btn--1 {
+    display: inline-block;
+}
+
+.contact-right {
+    flex-basis: 60%;
+}
+
+.contact-right form {
+    width: 100%;
+}
+
+form input,
+form textarea {
+    width: 100%;
+    border: 0;
+    outline: none;
+    background: #141414;
+    padding: 15px;
+    margin: 15px 0;
+    color: white;
+    font-size: 18px;
+    border: 6px;
+}
+
+
+.contact__btn.contact__btn--2 {
+    display: inline-block;
+    background-color: #312D2D;
+    font-size: 18px;
+    margin: 0 ;
+}
+
+.contact__btn--2:hover {
+    background: #2ecc71;
+    cursor: pointer;
+}
+
+footer {
+    height: 15vh;
+    width: 100%;
+    text-align: center;
+    padding: 3% 0;
+    background-color: #D9D9D9;
+    font-weight: 300;
+
+
+}
+
+/*******************************FOOTER SECTION *******************************/
+
+
+
+/*-------------------------MEDIA QUERIES -------------------------*/
+
+/*-------------------------HERO SECTION -------------------------*/
+@media only screen and (max-width: 600px) {
+
+    .header {
+        background-image: none;
+        background-color: #242323;
+    }
+
+    .header__image {
+        display: block;
+    }
+
+    .header__image img {
+        object-fit: cover;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        height: 200px;
+        width: 200px;
+        border-radius: 50%;
+    }
+
+    .header-text {
+        display: none;
+    }
+
+    .header-text--2 {
+        display: block;
+        position: absolute;
+        top: 80%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: #fff;
+    }
+
+    .header-text--2 h2 {
+        font-size: 20px;
+        font-weight: 200;
+        line-height: 1.8;
+    }
+
+    .header-text--2 span {
+        color: #20e700;
+    }
+}
+
+/*-------------------------ABOUT SECTION -------------------------*/
+
+/*****BREAKPOINT MOBILE 600px**************/
+@media only screen and (max-width: 600px) {
+    .about {
+        padding-top: 10%;
+        height: 150vh;
+    }
+
+    .about-img {
+        display: block;
+        text-align: center;
+        padding: 0 3% 5% 0;
+    }
+
+    .about-img img {
+        height: 200px;
+        width: 200px;
+        border-radius: 10px;
+        transition-delay: 0.01s;
+    }
+
+    .about-img img:hover {
+        transform: translate(-5px, -10px);
+        cursor: pointer;
+        box-shadow: 13px 10px 5px 0px rgba(133,121, 121, 0.75);
+        -webkit-box-shadow: 13px 10px 5px 0px rgba(133,121, 121, 0.75);;
+        -moz-box-shadow: 13px 10px 5px 0px rgba(133,121, 121, 0.75);
+    }
+
+    .about-text{
+        width: 80%;
+    }
+
+   .about-text h2{
+        font-size: 50px;
+        padding-top: 0;
+
+   }
+
+   .about-text p{
+    text-align: left;
+   }
+
+   .about__content{
+  
+    color: white; 
+    
+   }
+
+   .about__content p{
+    margin: 5% auto;
+    margin-left: 10%;
+
+   }
+
+   .about__para--1{
+    color: #20E700;
+   }
+
+
+
+    /* 
+.about-skills {
+  
+    width: 50%;
+    color: white;
+    margin: auto;
+    padding-top: 3%;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+}
+.about-skills h3 {
+    padding-right: 5%;
+}
+.about-skills__h3--1 {
+    border-bottom: 3px solid #20E700;
+    width: 5%;
+    margin-right: 50px;
+}
+*/
+}
+
+
+
+
+
+/*-------------------------PORTFOLIO SECTION -------------------------*/
+@media only screen and (max-width: 600px){
+   .portfolio{
+      height: 180vh;
+   }   
+
+   .portfolio h2{
+    font-size: 50px;
+    padding-top: 0;
+
+    }
+
+   
+
+   .portfolio__img img{
+        width: 70%;
+        height: 280px;
+        margin: 0 auto;
+        margin-bottom: 5%;
+   }
+
+   .portfolio__btn{
+    font-size: 4rem;
+   }
+/* 
+.portfolio h2 {
+    margin-top: 1%;
+    font-size: 60px;
+}
+.portfolio__img {
+    border-radius: 10px;
+    position: relative;
+}
+.portfolio__img img {
+    object-fit: cover;
+    width: 100%;
+    height: 400px;
+    border-radius: 10px;
+    display: block;
+}
+.portfolio__btn {
+    background-color: #45893A;
+    color: #fff;
+    height: 84px;
+    width: 287px;
+    border-radius: 10px;
+    text-decoration: none;
+    padding: .5% 1%;
+} */
+}
+/*-------------------------CONTACT SECTION -------------------------*/
+ @media only screen and (max-width: 600px){
+    .contact{
+        height: 200vh;
+    }
+
+    .contact__row{
+        flex-direction: column;
+    }
+
+    .contact-left, .contact-right {
+        flex-basis: 100%;
+    }
+} 
+
+/* 
+.contact__row {
+    display: flex;
+    flex-direction: row;
+}
+.contact h2 {
+    font-size: 60px;
+}
+.contact-left {
+    flex-basis: 35%;
+}
+.contact-left p {
+    margin-top: 30px;
+}
+.contact-left p i {
+    color: #20E700;
+    margin-right: 15px;
+    font-size: 25px;
+}
+.contact-left__icons {
+    margin-top: 15px;
+}
+.contact-left__icons a {
+    text-decoration: none;
+    font-size: 30px;
+    margin-right: 15px;
+    color: #D9D9D9;
+    display: inline-block;
+}
+.contact-left__icons a:hover {
+    color: #45893A;
+    transform: translateY(-5px);
+}
+.contact__btn {
+    display: block;
+    margin: 50px auto;
+    border: 1px solid #2ecc71;
+    padding: 14px 50px;
+    border-radius: 6px;
+    text-decoration: none;
+    color: white;
+    width: fit-content;
+}
+.contact__btn:hover {
+    background: #2ecc71;
+}
+.contact__btn.contact__btn--1 {
+    display: inline-block;
+}
+.contact-right {
+    flex-basis: 60%;
+}
+.contact-right form {
+    width: 100%;
+}
+form input,
+form textarea {
+    width: 100%;
+    border: 0;
+    outline: none;
+    background: #141414;
+    padding: 15px;
+    margin: 15px 0;
+    color: white;
+    font-size: 18px;
+    border: 6px;
+}
+.contact__btn.contact__btn--2 {
+    display: inline-block;
+    background-color: #312D2D;
+    font-size: 18px;
+}
+.contact__btn--2:hover {
+    background: #2ecc71;
+    cursor: pointer;
+} */
+
+/*-------------------------FOOTER SECTION -------------------------*/
+/* @media only screen and (max-width: 600px){
+    
+} */
